# ReflexView

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  algorithms.h  algorithms_png.cpp  byteviewer.cpp  byteviewer.h  constants.h  flake.nix  main.cpp  structviewer.h  ui_cli.cpp
core/: algorithms.h  algorithms_lzss.cpp  algorithms_png.cpp  algorithms_sha1.cpp  byteviewer.cpp  byteviewer.h  cli.cpp  constants.h  main.cpp  structviewer.cpp  structviewer.h  ui.h  ui_cli.cpp  ui_qt.cpp
core/algorithms/: gbapng.cpp  lzss.cpp  sha1.cpp
core/structviewer/: background.cpp  palette.cpp  roomprops.cpp  tilemap.cpp  tileset.cpp
include/: appbridge.h  byteviewer.h  constants.h  qmlbridge.h  structviewer.h  types.h  ui.h
include/algorithms/: gbapng.h  lzss.h  sha1.h
include/qt/: debug.h  imageprovider.h  init.h  qtui.h
include/structviewer/: background.h  palette.h  roomprops.h  tilemap.h  tileset.h
lib/libspng-0.7.4/: CMakeLists.txt
qt/: CMakeLists.txt  appbridge.cpp  debug.cpp  imageprovider.cpp  init.cpp  init.qml  mainwindow.cpp  mainwindow.qml  qmlbridge.cpp  qtui.cpp
